feat(frontend-auth): add API module and authentication layer
What:
- Added API service module with token-aware fetch helper and endpoint methods
- Added auth module for session initialization, login/logout, role checks, and access control
- Wired frontend entry page to load new modules

Where:
- Frontend/index.html
- Frontend/js/modules/api.js
- Frontend/js/modules/auth.js

Why:
- Provide frontend integration layer for backend auth and protected API operations

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -14,5 +14,7 @@
   <script src="./js/config.js"></script>
   <script src="./js/utils.js"></script>
   <script src="./js/storage.js"></script>
+  <script src="./js/modules/api.js"></script>
+  <script src="./js/modules/auth.js"></script>
 </body>
 </html>
