--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -16,5 +16,12 @@
   <script src="./js/storage.js"></script>
   <script src="./js/modules/api.js"></script>
   <script src="./js/modules/auth.js"></script>
+  <script src="./js/modules/components.js"></script>
+  <script src="./js/modules/router.js"></script>
+  <script>
+    document.addEventListener("DOMContentLoaded", async () => {
+      await window.router.initRouter();
+    });
+  </script>
 </body>
 </html>
