--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -17,6 +17,7 @@
   <script src="./js/modules/api.js"></script>
   <script src="./js/modules/auth.js"></script>
   <script src="./js/modules/components.js"></script>
+  <script src="./js/modules/page-initializers.js"></script>
   <script src="./js/modules/router.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", async () => {
