--- a/Frontend/pages/dashboard-manager.html
+++ b/Frontend/pages/dashboard-manager.html
@@ -1,8 +1,54 @@
 <div id="navbar"></div>
 <main class="mx-auto grid w-[min(1100px,96%)] grid-cols-1 gap-6 py-8 md:grid-cols-[240px_1fr]">
   <div id="sidebar"></div>
-  <section class="sf-card p-6">
-    <h1 class="text-2xl font-bold">Manager Dashboard</h1>
-    <p class="mt-2 text-slate-300">Review pending bookings and confirm sessions.</p>
+  <section class="space-y-6">
+    <div class="sf-card p-6">
+      <div class="flex items-center justify-between">
+        <h1 class="text-2xl font-bold">Manager Dashboard</h1>
+        <span id="manager-loading" class="hidden text-sm text-slate-400">Loading...</span>
+      </div>
+      <div class="mt-4 grid gap-4 sm:grid-cols-3">
+        <div class="rounded-lg border border-slate-700 bg-slate-900 p-4">
+          <p class="text-xs uppercase text-slate-500">Today's bookings</p>
+          <p id="manager-stat-today" class="mt-2 text-2xl font-bold text-sky-300">0</p>
+        </div>
+        <div class="rounded-lg border border-slate-700 bg-slate-900 p-4">
+          <p class="text-xs uppercase text-slate-500">Monthly revenue</p>
+          <p id="manager-stat-revenue" class="mt-2 text-2xl font-bold text-emerald-300">$0.00</p>
+        </div>
+        <div class="rounded-lg border border-slate-700 bg-slate-900 p-4">
+          <p class="text-xs uppercase text-slate-500">Studio capacity use</p>
+          <p id="manager-stat-capacity" class="mt-2 text-2xl font-bold text-amber-300">0%</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="sf-card p-6">
+      <h2 class="text-xl font-semibold">Booking Queue</h2>
+      <div class="mt-4 overflow-x-auto">
+        <table class="min-w-full text-left text-sm">
+          <thead class="border-b border-slate-700 text-slate-400">
+            <tr>
+              <th class="px-3 py-2">Date</th>
+              <th class="px-3 py-2">Studio</th>
+              <th class="px-3 py-2">Time</th>
+              <th class="px-3 py-2">Status</th>
+              <th class="px-3 py-2">Action</th>
+            </tr>
+          </thead>
+          <tbody id="manager-bookings-body"></tbody>
+        </table>
+      </div>
+    </div>
+
+    <div class="sf-card p-6">
+      <h2 class="text-xl font-semibold">Revenue by Day</h2>
+      <div id="manager-chart" class="mt-4 flex min-h-[140px] items-end gap-2"></div>
+    </div>
+
+    <div class="sf-card p-6">
+      <h2 class="text-xl font-semibold">Notifications</h2>
+      <div id="manager-notifications" class="mt-3"></div>
+    </div>
   </section>
 </main>
