--- a/Frontend/pages/landing.html
+++ b/Frontend/pages/landing.html
@@ -1,11 +1,45 @@
 <div id="navbar"></div>
-<main class="mx-auto w-[min(1100px,96%)] py-8">
-  <div class="sf-card p-8">
-    <h1 class="text-3xl font-bold">Welcome to StudioFlow</h1>
-    <p class="mt-3 text-slate-300">Book studios, manage sessions, and track your schedule.</p>
-    <div class="mt-6 flex gap-3">
-      <a href="/login" data-link class="rounded bg-sky-400 px-4 py-2 font-semibold text-sky-950">Login</a>
-      <a href="/register" data-link class="rounded border border-slate-600 px-4 py-2 text-slate-200">Register</a>
+<main class="mx-auto w-[min(1200px,96%)] py-8">
+  <section class="sf-card relative overflow-hidden p-8 md:p-12">
+    <div class="absolute -right-20 -top-20 h-56 w-56 rounded-full bg-sky-500/20 blur-2xl"></div>
+    <div class="absolute -left-16 bottom-0 h-40 w-40 rounded-full bg-emerald-500/20 blur-2xl"></div>
+    <p class="text-xs uppercase tracking-[0.25em] text-sky-300">StudioFlow Platform</p>
+    <h1 class="mt-3 text-3xl font-black leading-tight md:text-5xl">StudioFlow - Бронируй студию за клик</h1>
+    <p class="mt-4 max-w-2xl text-slate-300">
+      Быстрый поиск свободных студий, прозрачная стоимость и мгновенное подтверждение бронирования
+      для музыкантов, подкастеров и команд.
+    </p>
+    <div class="mt-7 flex flex-wrap gap-3">
+      <a href="/login" data-link class="rounded bg-sky-400 px-5 py-3 font-semibold text-sky-950">Начать бронирование</a>
+      <a href="/register" data-link class="rounded border border-slate-600 px-5 py-3 text-slate-200">Зарегистрироваться</a>
     </div>
-  </div>
+  </section>
+
+  <section class="mt-10">
+    <div class="mb-4 flex items-center justify-between">
+      <h2 class="text-2xl font-bold">Featured studios</h2>
+      <span class="text-sm text-slate-400">Top spaces this week</span>
+    </div>
+    <div class="grid gap-4 md:grid-cols-3">
+      <article class="sf-card p-5">
+        <h3 class="text-lg font-semibold text-sky-300">Red Studio</h3>
+        <p class="mt-2 text-sm text-slate-300">Compact recording room for solo sessions and vocals.</p>
+        <p class="mt-3 text-sm text-slate-400">$45/hour • Capacity 3</p>
+      </article>
+      <article class="sf-card p-5">
+        <h3 class="text-lg font-semibold text-sky-300">Blue Studio</h3>
+        <p class="mt-2 text-sm text-slate-300">Mid-size room for podcast interviews and group recording.</p>
+        <p class="mt-3 text-sm text-slate-400">$65/hour • Capacity 6</p>
+      </article>
+      <article class="sf-card p-5">
+        <h3 class="text-lg font-semibold text-sky-300">Green Studio</h3>
+        <p class="mt-2 text-sm text-slate-300">Large multipurpose space with advanced acoustics.</p>
+        <p class="mt-3 text-sm text-slate-400">$90/hour • Capacity 10</p>
+      </article>
+    </div>
+  </section>
 </main>
+
+<footer class="mx-auto mb-6 mt-10 w-[min(1200px,96%)] border-t border-slate-800 pt-5 text-sm text-slate-500">
+  <p>StudioFlow © 2026. Demo product for booking workflow testing.</p>
+</footer>
