--- a/Frontend/pages/login.html
+++ b/Frontend/pages/login.html
@@ -1,12 +1,22 @@
 <div id="navbar"></div>
-<main class="mx-auto w-[min(520px,92%)] py-10">
-  <section class="sf-card p-6">
+<main class="mx-auto w-[min(520px,92%)] py-12">
+  <section class="sf-card p-7">
     <h1 class="text-2xl font-bold">Login</h1>
-    <p class="mt-2 text-sm text-slate-400">Use your StudioFlow account credentials.</p>
-    <form id="login-form" class="mt-6 space-y-3">
-      <input type="email" placeholder="Email" />
-      <input type="password" placeholder="Password" />
-      <button type="button">Sign in</button>
+    <p class="mt-2 text-sm text-slate-400">Sign in to continue booking studios.</p>
+    <form id="login-form" class="mt-6 space-y-4">
+      <div>
+        <label for="login-email" class="mb-1 block text-xs uppercase tracking-wide text-slate-400">Email</label>
+        <input id="login-email" type="email" required placeholder="you@studioflow.com" />
+      </div>
+      <div>
+        <label for="login-password" class="mb-1 block text-xs uppercase tracking-wide text-slate-400">Password</label>
+        <input id="login-password" type="password" minlength="6" required placeholder="••••••••" />
+      </div>
+      <button id="login-submit" type="submit" class="w-full">Sign in</button>
     </form>
+    <p class="mt-4 text-sm text-slate-400">
+      No account yet?
+      <a href="/register" data-link class="text-sky-300 hover:underline">Create one</a>
+    </p>
   </section>
 </main>
