--- a/Frontend/pages/profile.html
+++ b/Frontend/pages/profile.html
@@ -1,8 +1,40 @@
 <div id="navbar"></div>
 <main class="mx-auto grid w-[min(1100px,96%)] grid-cols-1 gap-6 py-8 md:grid-cols-[240px_1fr]">
   <div id="sidebar"></div>
-  <section class="sf-card p-6">
-    <h1 class="text-2xl font-bold">Profile</h1>
-    <p class="mt-2 text-slate-300">View your account details and role.</p>
+  <section class="space-y-6">
+    <div class="sf-card p-6">
+      <div class="flex items-center justify-between">
+        <h1 class="text-2xl font-bold">Profile</h1>
+        <span id="profile-loading" class="hidden text-sm text-slate-400">Loading...</span>
+      </div>
+      <div class="mt-4 grid gap-3 sm:grid-cols-2">
+        <div class="rounded border border-slate-700 bg-slate-900 px-3 py-2">
+          <p class="text-xs uppercase text-slate-500">Email</p>
+          <p id="profile-email" class="mt-1 text-sm text-slate-200">-</p>
+        </div>
+        <div class="rounded border border-slate-700 bg-slate-900 px-3 py-2">
+          <p class="text-xs uppercase text-slate-500">Role</p>
+          <p id="profile-role" class="mt-1 text-sm text-slate-200">-</p>
+        </div>
+        <div class="rounded border border-slate-700 bg-slate-900 px-3 py-2">
+          <p class="text-xs uppercase text-slate-500">First Name</p>
+          <p id="profile-first-name" class="mt-1 text-sm text-slate-200">-</p>
+        </div>
+        <div class="rounded border border-slate-700 bg-slate-900 px-3 py-2">
+          <p class="text-xs uppercase text-slate-500">Last Name</p>
+          <p id="profile-last-name" class="mt-1 text-sm text-slate-200">-</p>
+        </div>
+      </div>
+      <div class="mt-4 flex flex-wrap gap-2">
+        <button id="profile-edit" type="button">Edit profile</button>
+        <button id="profile-password" type="button" class="bg-amber-400 text-amber-950">Change password</button>
+        <button id="profile-logout" type="button" class="bg-rose-500 text-white">Logout</button>
+      </div>
+    </div>
+
+    <div class="sf-card p-6">
+      <h2 class="text-xl font-semibold">Recent bookings (last 5)</h2>
+      <ul id="profile-booking-history" class="mt-4 space-y-2"></ul>
+    </div>
   </section>
 </main>
