--- a/Frontend/pages/register.html
+++ b/Frontend/pages/register.html
@@ -1,15 +1,36 @@
 <div id="navbar"></div>
-<main class="mx-auto w-[min(560px,92%)] py-10">
-  <section class="sf-card p-6">
+<main class="mx-auto w-[min(640px,92%)] py-12">
+  <section class="sf-card p-7">
     <h1 class="text-2xl font-bold">Create Account</h1>
-    <p class="mt-2 text-sm text-slate-400">Register to start booking studios.</p>
-    <form id="register-form" class="mt-6 space-y-3">
-      <input type="text" placeholder="First Name" />
-      <input type="text" placeholder="Last Name" />
-      <input type="email" placeholder="Email" />
-      <input type="password" placeholder="Password" />
-      <input type="password" placeholder="Confirm Password" />
-      <button type="button">Create account</button>
+    <p class="mt-2 text-sm text-slate-400">Register to access StudioFlow dashboard.</p>
+    <form id="register-form" class="mt-6 grid gap-4 md:grid-cols-2">
+      <div>
+        <label for="reg-first-name" class="mb-1 block text-xs uppercase tracking-wide text-slate-400">First Name</label>
+        <input id="reg-first-name" type="text" required placeholder="John" />
+      </div>
+      <div>
+        <label for="reg-last-name" class="mb-1 block text-xs uppercase tracking-wide text-slate-400">Last Name</label>
+        <input id="reg-last-name" type="text" required placeholder="Doe" />
+      </div>
+      <div class="md:col-span-2">
+        <label for="reg-email" class="mb-1 block text-xs uppercase tracking-wide text-slate-400">Email</label>
+        <input id="reg-email" type="email" required placeholder="you@studioflow.com" />
+      </div>
+      <div>
+        <label for="reg-password" class="mb-1 block text-xs uppercase tracking-wide text-slate-400">Password</label>
+        <input id="reg-password" type="password" minlength="6" required placeholder="At least 6 chars" />
+      </div>
+      <div>
+        <label for="reg-confirm-password" class="mb-1 block text-xs uppercase tracking-wide text-slate-400">Confirm Password</label>
+        <input id="reg-confirm-password" type="password" minlength="6" required placeholder="Repeat password" />
+      </div>
+      <div class="md:col-span-2">
+        <button id="register-submit" type="submit" class="w-full">Create account</button>
+      </div>
     </form>
+    <p class="mt-4 text-sm text-slate-400">
+      Already have an account?
+      <a href="/login" data-link class="text-sky-300 hover:underline">Sign in</a>
+    </p>
   </section>
 </main>
