feat(frontend-app): add app bootstrap and page event handlers
What:
- Added app bootstrap with route/access checks, token validation, and navigation listeners
- Implemented page-level async handlers for login, register, user dashboard, manager dashboard, admin dashboard, and profile
- Added booking modal and role modal flows with loading/error UI states
- Added profile edit and password change handler flows
- Extended API module with user role/profile/password update methods

Where:
- Frontend/index.html
- Frontend/js/app.js
- Frontend/js/modules/api.js
- Frontend/js/modules/auth.js
- Frontend/js/modules/page-initializers.js
- Frontend/pages/login.html
- Frontend/pages/register.html
- Frontend/pages/dashboard-user.html
- Frontend/pages/dashboard-admin.html
- Frontend/pages/profile.html

Why:
- Provide complete frontend initialization and event-driven page behavior for authenticated role-based workflows

--- a/Frontend/pages/dashboard-admin.html
+++ b/Frontend/pages/dashboard-admin.html
@@ -52,3 +52,23 @@
     </div>
   </section>
 </main>
+
+<div id="role-modal" class="fixed inset-0 z-40 hidden items-center justify-center bg-slate-950/70 p-4">
+  <div class="sf-card w-full max-w-md p-6">
+    <h3 class="text-lg font-semibold">Change User Role</h3>
+    <p class="mt-1 text-sm text-slate-400">Select a new role and apply changes.</p>
+    <input type="hidden" id="role-user-id" />
+    <div class="mt-4">
+      <label for="role-select" class="mb-1 block text-xs uppercase tracking-wide text-slate-400">Role</label>
+      <select id="role-select">
+        <option>User</option>
+        <option>Manager</option>
+        <option>Admin</option>
+      </select>
+    </div>
+    <div class="mt-5 flex justify-end gap-2">
+      <button id="role-cancel" type="button" class="bg-slate-700 text-slate-100">Cancel</button>
+      <button id="role-save" type="button">Save role</button>
+    </div>
+  </div>
+</div>
