--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -19,10 +19,6 @@
   <script src="./js/modules/components.js"></script>
   <script src="./js/modules/page-initializers.js"></script>
   <script src="./js/modules/router.js"></script>
-  <script>
-    document.addEventListener("DOMContentLoaded", async () => {
-      await window.router.initRouter();
-    });
-  </script>
+  <script src="./js/app.js"></script>
 </body>
 </html>
