--- a/Frontend/pages/login.html
+++ b/Frontend/pages/login.html
@@ -3,7 +3,7 @@
   <section class="sf-card p-7">
     <h1 class="text-2xl font-bold">Login</h1>
     <p class="mt-2 text-sm text-slate-400">Sign in to continue booking studios.</p>
-    <form id="login-form" class="mt-6 space-y-4">
+    <form id="loginForm" class="mt-6 space-y-4">
       <div>
         <label for="login-email" class="mb-1 block text-xs uppercase tracking-wide text-slate-400">Email</label>
         <input id="login-email" type="email" required placeholder="you@studioflow.com" />
