--- a/Frontend/pages/profile.html
+++ b/Frontend/pages/profile.html
@@ -7,7 +7,7 @@
         <h1 class="text-2xl font-bold">Profile</h1>
         <span id="profile-loading" class="hidden text-sm text-slate-400">Loading...</span>
       </div>
-      <div class="mt-4 grid gap-3 sm:grid-cols-2">
+      <form id="profile-form" class="mt-4 grid gap-3 sm:grid-cols-2">
         <div class="rounded border border-slate-700 bg-slate-900 px-3 py-2">
           <p class="text-xs uppercase text-slate-500">Email</p>
           <p id="profile-email" class="mt-1 text-sm text-slate-200">-</p>
@@ -16,17 +16,18 @@
           <p class="text-xs uppercase text-slate-500">Role</p>
           <p id="profile-role" class="mt-1 text-sm text-slate-200">-</p>
         </div>
-        <div class="rounded border border-slate-700 bg-slate-900 px-3 py-2">
-          <p class="text-xs uppercase text-slate-500">First Name</p>
-          <p id="profile-first-name" class="mt-1 text-sm text-slate-200">-</p>
+        <div>
+          <label for="profile-first-name" class="mb-1 block text-xs uppercase tracking-wide text-slate-400">First Name</label>
+          <input id="profile-first-name" type="text" disabled />
         </div>
-        <div class="rounded border border-slate-700 bg-slate-900 px-3 py-2">
-          <p class="text-xs uppercase text-slate-500">Last Name</p>
-          <p id="profile-last-name" class="mt-1 text-sm text-slate-200">-</p>
+        <div>
+          <label for="profile-last-name" class="mb-1 block text-xs uppercase tracking-wide text-slate-400">Last Name</label>
+          <input id="profile-last-name" type="text" disabled />
         </div>
-      </div>
+      </form>
       <div class="mt-4 flex flex-wrap gap-2">
         <button id="profile-edit" type="button">Edit profile</button>
+        <button id="profile-save" type="button" class="hidden bg-emerald-500 text-emerald-950">Save profile</button>
         <button id="profile-password" type="button" class="bg-amber-400 text-amber-950">Change password</button>
         <button id="profile-logout" type="button" class="bg-rose-500 text-white">Logout</button>
       </div>
