--- a/Frontend/pages/register.html
+++ b/Frontend/pages/register.html
@@ -3,7 +3,7 @@
   <section class="sf-card p-7">
     <h1 class="text-2xl font-bold">Create Account</h1>
     <p class="mt-2 text-sm text-slate-400">Register to access StudioFlow dashboard.</p>
-    <form id="register-form" class="mt-6 grid gap-4 md:grid-cols-2">
+    <form id="registerForm" class="mt-6 grid gap-4 md:grid-cols-2">
       <div>
         <label for="reg-first-name" class="mb-1 block text-xs uppercase tracking-wide text-slate-400">First Name</label>
         <input id="reg-first-name" type="text" required placeholder="John" />
