feat(ui): finalize english localization and red theme polish
What:
- Updated frontend components/pages to consistent red dark visual system
- Localized remaining UI text to English
- Improved input typography and profile field alignment
- Refined navigation active states and layout consistency
- Included booking service adjustments

Where:
- Backend/StudioFlow.API/Services/BookingService.cs
- Frontend/components/*
- Frontend/css/styles.css
- Frontend/js/modules/*
- Frontend/pages/*

Why:
- Finalize UI quality and localization for end-to-end project readiness.

--- a/Frontend/pages/dashboard-admin.html
+++ b/Frontend/pages/dashboard-admin.html
@@ -10,7 +10,7 @@
       <div class="mt-4 grid gap-4 sm:grid-cols-3">
         <div class="rounded-lg border border-slate-700 bg-slate-900 p-4">
           <p class="text-xs uppercase text-slate-500">Total users</p>
-          <p id="admin-stat-users" class="mt-2 text-2xl font-bold text-sky-300">0</p>
+          <p id="admin-stat-users" class="mt-2 text-2xl font-bold text-rose-300">0</p>
         </div>
         <div class="rounded-lg border border-slate-700 bg-slate-900 p-4">
           <p class="text-xs uppercase text-slate-500">Total bookings</p>
