--- a/Frontend/pages/login.html
+++ b/Frontend/pages/login.html
@@ -16,7 +16,7 @@
     </form>
     <p class="mt-4 text-sm text-slate-400">
       No account yet?
-      <a href="/register" data-link class="text-sky-300 hover:underline">Create one</a>
+      <a href="/register" data-link class="text-rose-300 hover:underline">Create one</a>
     </p>
   </section>
 </main>
