--- a/Frontend/pages/profile.html
+++ b/Frontend/pages/profile.html
@@ -26,10 +26,10 @@
         </div>
       </form>
       <div class="mt-4 flex flex-wrap gap-2">
-        <button id="profile-edit" type="button">Edit profile</button>
-        <button id="profile-save" type="button" class="hidden bg-emerald-500 text-emerald-950">Save profile</button>
-        <button id="profile-password" type="button" class="bg-amber-400 text-amber-950">Change password</button>
-        <button id="profile-logout" type="button" class="bg-rose-500 text-white">Logout</button>
+        <button id="profile-edit" type="button" class="sf-btn-secondary">Edit profile</button>
+        <button id="profile-save" type="button" class="sf-btn-primary hidden">Save profile</button>
+        <button id="profile-password" type="button" class="sf-btn-danger">Change password</button>
+        <button id="profile-logout" type="button" class="sf-btn-danger">Logout</button>
       </div>
     </div>
 
