--- a/Frontend/pages/register.html
+++ b/Frontend/pages/register.html
@@ -30,7 +30,7 @@
     </form>
     <p class="mt-4 text-sm text-slate-400">
       Already have an account?
-      <a href="/login" data-link class="text-sky-300 hover:underline">Sign in</a>
+      <a href="/login" data-link class="text-rose-300 hover:underline">Sign in</a>
     </p>
   </section>
 </main>
