--- a/Frontend/pages/dashboard-user.html
+++ b/Frontend/pages/dashboard-user.html
@@ -4,7 +4,7 @@
   <section class="space-y-6">
     <div class="sf-card p-6">
       <div class="flex items-center justify-between">
-        <h1 class="text-2xl font-bold">Мои бронирования</h1>
+        <h1 class="text-2xl font-bold">My Bookings</h1>
         <span id="user-dashboard-loading" class="hidden text-sm text-slate-400">Loading...</span>
       </div>
       <div class="mt-4 grid gap-3 md:grid-cols-2">
@@ -42,8 +42,8 @@
 
     <div class="sf-card p-6">
       <div class="flex items-center justify-between">
-        <h2 class="text-xl font-semibold">Новое бронирование</h2>
-        <button id="open-booking-modal" type="button">Create booking</button>
+        <h2 class="text-xl font-semibold">New Booking</h2>
+        <button id="open-booking-modal" type="button" class="sf-btn-danger">Create booking</button>
       </div>
       <p class="mt-2 text-sm text-slate-400">Use modal form to create a booking with real-time price calculation.</p>
     </div>
